2006-11-20 tommi@tntnet.org

  - fix tcpstream to correctly report end-of-file in all circumstances

2006-09-11 tommi@tntnet.org

  - fixed buffer-overflow in logger when formatting dates

2006-08-10 tommi@tntnet.org

  - new helper-class IConverter for easier usage of iconv(3) and iconvstream

2006-07-27 tommi@tntnet.org

  - fix iconvstream

2006-06-21 tommi@tntnet.org

  - license changed to LGPL

2006-05-24 tommi@tntnet.org

  - fix tcp-client: create socket when known, which to create
    this fixes also problems in running any applications on systems without
    IPv6

2006-04-27 tommi@tntnet.org

  - support for IPv6

2006-04-16 tommi@tntnet.org

  - fixes for AIX-compatibility

2006-04-06 tommi@tntnet.org

  - faster formatting of logmessages

2006-04-04 tommi@tntnet.org

  - flushdelay works now with rolling-files
  - ANSI-C++-fixes

2006-03-02 tommi@tntnet.org

  - new logging-parameter flushdelay, which speeds up logging
    by starting a backgroundthread, which flushes asynchronous

2005-01-20 tommi@tntnet.org

  - thread-classes simplified and demo improved
  - output of log-messages speed-optimized

2005-12-12 tommi@tntnet.org

  - improved error-checking in network-classes
  - logging integrated into base-lib (no libcxxtools-log.so any more)

2005-11-08 tommi@tntnet.org

  - cxxtools::Thread split into cxxtools::AttachedThread and cxxtools::DetachedThread

2005-11-04 tommi@tntnet.org

  - bugfix in cxxtools::HttpRequest

2005-09-18 tommi@tntnet.org

  - udp-reply

2005-07-19 tommi@tntnet.org

  - new namingconventions: classfiles start with capitals, methods with lower
    case
  - support for udp-messages (cxxtools::UdpSender, cxxtools::UdpReceiver)
  - logging through udp

2005-07-15 tommi@tntnet.org

  - fixed some method-names to conform common naming convetions

2005-06-18 tommi@tntnet.org

  - version 1.3.1 released
  - fixed copy-constructor for query_params

2005-01-29 tommi@tntnet.org

  - version 1.3.0 released