@@ -1,3 +1,9 @@
+2006-11-22 tommi@tntnet.org
+
+  - make loggers more private and instantiate existing loggers later
+  - "putchar" is a macro somewhere - rename member-method to workaround
+    this name-conflict
+
 2006-11-20 tommi@tntnet.org
 
   - fix tcpstream to correctly report end-of-file in all circumstances
